--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "sample_app",
+  "license": "UNLICENSED",
   "private": true,
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
